# graphrag-template

./: README.md  langgraph.json  pyproject.toml
src/chatbot/: configuration.py  graph.py  utils.py
src/graphrag/: __init__.py  graph.py  prompts.py
tests/cassettes/: 96576af7-8e74-4168-b657-5033db32c6bf.yaml
tests/integration_tests/: test_graphrag.py
